commit 5 все задания выполнены, все тесты написаны. Все работает отлично.